@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=1
 PKG_MINOR=1
-PKG_REVISION=0
+PKG_REVISION=1
 PKG_BUILD=0
